--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			scene.add(light);
 
       // Add a GLTF model to the scene
-      const modelUrl = 'https://raw.githubusercontent.com/immersive-web/webxr-samples/main/media/gltf/space/space.gltf';
+      const modelUrl = 'AC_Cobra.glb';
 
 			loader = new THREE.GLTFLoader();
 			loader.load(
