--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
 			var light = new THREE.HemisphereLight(0xffffff, 0xbbbbff, 1);
 			light.position.set(0.5, 1, 0.25);
 			scene.add(light);
+			
+			var lightOne = new THREE.AmbientLight( 0x404040 );
+			scene.add(lightOne);
+			
+			
+			
+			
 
       // Add a GLTF model to the scene
       const modelUrl = 'AC_Cobra.glb';
