--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 			scene.add(light);
 			
 			var lightOne = new THREE.AmbientLight( 0x404040,1 );
+			lightOne.position.set(0.5, 1, 0.25);
 			scene.add(lightOne);
 			
 			
