--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			
 
       // Add a GLTF model to the scene
-      const modelUrl = 'AC_Cobra.glb';
+      const modelUrl = 'https://sketchfab.com/models/94b24a60dc1b48248de50bf087c0f042/embed?';
 
 			loader = new THREE.GLTFLoader();
 			loader.load(
