--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			
 
       // Add a GLTF model to the scene
-      const modelUrl = 'AC_Cobra.glb';
+      const modelUrl = 'char.glb';
 
 			loader = new THREE.GLTFLoader();
 			loader.load(
