--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				modelUrl,
 				function (gltf) {
           model = gltf.scene;
-          model.position.z = -1 0 0.5;
+          model.position.set(-1 0 0.5);
 					
 					scene.add(model);
           console.log("Model added to scene");
