--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				function (gltf) {
           model = gltf.scene;
           model.position.z =  -0.7;
-model.position.y = -1;
+model.position.y = -.02;
 					
 					
 					scene.add(model);
