--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ model.position.y = -0.2;
 					
 					
 					scene.add(model);
+					const animations = gltf.animations;
+const mixer = new THREE.AnimationMixer( model );
+mixer.clipAction( animations[ 0 ] ).setDuration( 1 ).play();
           console.log("Model added to scene");
 				},
 				function (xhr) {
