--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       // Add a GLTF model to the scene
 			
-      const modelUrl = 'https://raw.githubusercontent.com/baronwatts/models/master/PolarBear.glb';
+      const modelUrl = 'char.glb';
 
 			loader = new THREE.GLTFLoader();
 			loader.load(
