--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           model = gltf.scene;
           model.position.z =  -0.7;
 model.position.y = -0.2;
-					var animation = gltf.animation[ 0 ];
+					var animation = gltf.animations[ 2 ];
       var mixer = new THREE.AnimationMixer( model );
       mixers.push( mixer );
 
